--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,40 @@
-# Secrets
-secrets/*
-!secrets/.gitkeep
-local_secrets.sh
+# dependencies
+/node_modules
 
-# Environment files
-.env
-.env.*
-!.env.example
+# next.js
+/.next/
+/out/
 
-# Node modules
-node_modules/
+# production
+/build
 
-# Build directories
-dist/
-build/
-
-# Logs
-*.log
-
-# OS files
+# misc
 .DS_Store
-Thumbs.db
 
-# IDE files
-.vscode/
-.idea/
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# SSL certificates (if not using dummy ones for development)
-*.pem
-*.key
-*.crt
-*.csr
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# prisma
+/prisma/*.db
 
 # Docker volumes
-mongo-data/
-redis-data/
-uploads/
+postgres_data/
+
+# certs
+*.crt
+*.csr
+*.key
+*.pem
