--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
-    "next": "14.1.0",
-    "next-auth": "^4.22.1",
+    "next": "^14.2.14",
+    "next-auth": "^4.24.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
