--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^14.2.14",
     "next-auth": "^4.24.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.1.0",
