--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.665.0",
     "@prisma/client": "^5.8.0",
+    "@upstash/ratelimit": "^2.0.3",
+    "@upstash/redis": "^1.34.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "^14.2.14",
     "next-auth": "^4.24.8",
+    "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "winston": "^3.15.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
