--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.665.0",
     "@prisma/client": "^5.8.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.2",
     "multer": "^1.4.5-lts.1",
