--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.665.0",
     "@prisma/client": "^5.8.0",
     "@tailwindcss/forms": "^0.5.9",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.2",
+    "leaflet": "^1.9.3",
+    "react-leaflet": "^4.2.1",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
     "next": "^14.2.14",
     "next-auth": "^4.24.8",
     "next-connect": "^1.0.0",
