--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,25 @@ services:
       - db
     volumes:
       - ./public/uploads:/app/public/uploads
+    networks:
+      - bird-network
 
   db:
-    image: postgres:13
+    image: postgres:15
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - bird-network
 
 volumes:
   postgres_data:
   uploads:
+
+networks:
+  bird-network:
